--- a/packages/eslint-config-m3.intl.agrajag/package.json
+++ b/packages/eslint-config-m3.intl.agrajag/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "m3.intl.agrajag",
-  "version": "0.0.1",
-  "description": "M3 Javascript Styleguide and Linter",
+  "name": "eslint-config-m3.intl.agrajag",
+  "version": "0.0.2",
+  "description": "M3 Linting Rules",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +17,7 @@
   "homepage": "https://github.com/m3europe/m3.intl.agrajag#readme",
   "dependencies": {
     "eslint": "^2.2.0",
-    "eslint-config-airbnb": "^6.0.2",
+    "eslint-config-airbnb": "^6.0.0",
     "eslint-plugin-react": "^4.0.0"
   }
 }
