--- a/packages/eslint-config-m3.intl.agrajag/package.json
+++ b/packages/eslint-config-m3.intl.agrajag/package.json
@@ -16,8 +16,10 @@
   },
   "homepage": "https://github.com/m3europe/m3.intl.agrajag#readme",
   "dependencies": {
-    "eslint": "^2.4.0",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-plugin-react": "^4.1.0"
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2"
   }
 }
